# practiceData

./: deploy.sh  pyproject.toml
ddl/dm/: report1.sql  report2.sql  report3.sql
ddl/dw/: Address.sql  Customer.sql  CustomerAddress.sql  Product.sql  ProductCategory.sql  ProductDescription.sql  ProductModel.sql  ProductModelProductDescription.sql  SalesOrder.sql
ddl/raw/: Address.sql  Customer.sql  CustomerAddress.sql  Product.sql  ProductCategory.sql  ProductDescription.sql  ProductModel.sql  ProductModelProductDescription.sql  SalesOrder.sql
resources/config/: config.csv
resources/sql/: hiveddl.sql
resources/templates/: normal.sql
scripts/: etl_script_generator.py  file_utils.py  hive_sql_parser.py  pack_script.sh  poetry_ci.py  table.py
shell/: update_data.sh  update_report.sh
sql/: ETL_Address.sql  ETL_Customer.sql  ETL_CustomerAddress.sql  ETL_ProductCategory.sql  ETL_ProductDescription.sql  ETL_ProductModel.sql  ETL_ProductModelProductDescription.sql  ETL_SalesOrder.sql  ETL_csv_SaleOrder.sql  ETL_product.sql  address.sql  csv_saleorder.sql  customer.sql  customeraddress.sql  etl_address.sql  etl_csv_saleorder.sql  etl_customer.sql  etl_customeraddress.sql  etl_product.sql  etl_productcategory.sql  etl_productdescription.sql  etl_productmodel.sql  etl_productmodelproductdescription.sql  etl_salesorder.sql  product.sql  productcategory.sql  productdescription.sql  productmodel.sql  productmodelproductdescription.sql  report_1.sql  report_2.sql  report_3.sql  salesorder.sql  test.sql
