[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
etl-cli="scripts.poetry_ci:etl_script_generator_cli"
[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.3"
click = "^8.0.3"
pandas = "^1.3.4"
sqlparse = "^0.4.2"
PyYAML = "^6.0"
jsonpath-rw = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
